# ReadFile

./: .gitignore  Readme.md  requirements.txt  setup.cfg  setup.py
ReadFile.egg-info/: PKG-INFO  SOURCES.txt
read_file/: read_file.py
