[metadata]
name = ReadFile
version = 0.0.1
author = Jayant Khanna
author_email = jayantkhanna3105@gmail.com
description = This project is used to read a file and return the contents of the file
long_description = file: README.md
long_description_content_type = text/markdown
url = 
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.7
include_package_data = True